# multimon-wayland

./: CMakeLists.txt  TODO.md  flake.nix
cli/: viturectl
include/: capture_multi.hpp  capture_wlr_dmabuf.hpp  command_server.hpp  glasses.hpp  platform.hpp
protocols/: linux-dmabuf-unstable-v1.xml  wlr-screencopy-unstable-v1.xml  xdg-output-unstable-v1.xml
src/: capture_multi.cpp  capture_wlr_dmabuf.cpp  command_server.cpp  main.cpp  platform_glfw.cpp
systemd/: viture.service  viture.socket
